--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "e-commerce-admin-panel",
+  "name": "ecommerce-admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "server": "json-server --watch db.json --port 3001",
-    "dev": "concurrently \"npm start\" \"npm run server\""
+    "dev": "concurrently \"vite\" \"json-server --watch db.json --port 3001\"",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
-    "vite": "^5.4.18"
+    "json-server": "^1.0.0-beta.3",
+    "vite": "^5.1.4"
   }
 }
