--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm install && npm run build"
+
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -26,4 +28,5 @@
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
+
 }
